setup docker and removed registration, added initD
